src/objects/Mana_Household_Repeatable_Data__c.object
<CustomObject>
    <fields>
        <fullName>Backyard_Garden_Generates_Surplus__c</fullName>
        <label>Backyard Garden Generates Surplus</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Main_Fertilizer_Type__c</fullName>
        <label>Backyard Garden Main Fertilizer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Compra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrega de programas de huertas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Produce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trueque</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Monthly_Sales__c</fullName>
        <label>Backyard Garden Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backyard_Garden_Pest_Control_Method__c</fullName>
        <label>Backyard Garden Pest Control Method</label>
        <picklist>
            <picklistValues>
                <fullName>Biopreparado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ninguno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Químico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_10__c</fullName>
        <label>FS_10</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_11__c</fullName>
        <label>FS_11</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_12__c</fullName>
        <label>FS_12</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FS_Children__c</fullName>
        <label>FS_Children</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Food_Security_Classification__c</fullName>
        <label>Food Security Classification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Food_Security_Score__c</fullName>
        <formula>IF(TEXT(FS_1__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_2__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_3__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_4__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_5__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_6__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_7__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_8__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_9__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_10__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_11__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_12__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_13__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_14__c)==&apos;Sí&apos;,1,0)+
IF(TEXT(FS_15__c)==&apos;Sí&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Food Security Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Backyard_Garden__c</fullName>
        <label>Has_Backyard_Garden</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Mana_Household__c</referenceTo>
        <relationshipLabel>Repeatable Data</relationshipLabel>
        <relationshipName>Mana_Household_Repeatable_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weekly_Food_Spend__c</fullName>
        <label>Weekly Food Spend</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Mana Household Repeatable Data</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mana Household Repeatable Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>